--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
             </div>
             <!-- Certification Ends -->
 
-            <a href="#" class="btn link-item">download cV</a>
+            <a href="./subramani_cv.pdf" download class="btn link-item">download cV</a>
             <a href="#contact" class="btn link-item">contact me</a>
 
           </div>
@@ -253,10 +253,8 @@
               </div>
               <div class="general-info">
                 <ul>
-                  <li>Created - <span>4 Dec 2024</span></li>
                   <li>technologies used - <span>html, css</span></li>
                   <li>Role - <span>Frontend</span></li>
-                  <li>View Online - <span><a href="#" target="_blank">www.domain.com</a></span></li>
                 </ul>
               </div>
             </div>
@@ -279,10 +277,8 @@
               </div>
               <div class="general-info">
                 <ul>
-                  <li>Created - <span>4 Dec 2024</span></li>
                   <li>technologies used - <span>Bootstrap 5</span></li>
                   <li>Role - <span>Frontend</span></li>
-                  <li>View Online - <span><a href="#" target="_blank">www.domain.com</a></span></li>
                 </ul>
               </div>
             </div>
@@ -305,10 +301,8 @@
               </div>
               <div class="general-info">
                 <ul>
-                  <li>Created - <span>4 Dec 2024</span></li>
                   <li>technologies used - <span>html, css</span></li>
                   <li>Role - <span>Frontend</span></li>
-                  <li>View Online - <span><a href="#" target="_blank">www.domain.com</a></span></li>
                 </ul>
               </div>
             </div>
@@ -332,19 +326,19 @@
             <form>
               <div class="row">
                 <div class="input-group">
-                  <input type="text" placeholder="your name" class="input-control" required>
+                  <input type="text" placeholder="your name" id="fullName" class="input-control" required>
                 </div>
                 <div class="input-group">
-                  <input type="text" placeholder="email" class="input-control" required>
+                  <input type="text" placeholder="email" id="email_id" class="input-control" required>
                 </div>
                 <div class="input-group">
                   <input type="text" placeholder="subject" class="input-control" required>
                 </div>
                 <div class="input-group">
-                  <textarea placeholder="message" class="input-control" required></textarea>
+                  <textarea placeholder="message" id="message" class="input-control" required></textarea>
                 </div>
                 <div class="submit-btn">
-                  <button type="submit" class="btn">send message</button>
+                  <button type="submit" class="btn" id="contact-btn">send message</button>
                 </div>
               </div>
             </form>
